lumen: fix spacing on btn-group-vertical

--- a/lumen/_bootswatch.scss
+++ b/lumen/_bootswatch.scss
@@ -127,6 +127,18 @@
   }
 }
 
+.btn-group-vertical {
+  .btn + .btn {
+    &:hover {
+      border-top-width: 1px;
+    }
+
+    &:active {
+      border-top-width: 2px;
+    }
+  }
+}
+
 // Typography =================================================================
 
 .text-primary,
