--- a/lumen/bootstrap.css
+++ b/lumen/bootstrap.css
@@ -6651,6 +6651,12 @@ button.close {
 .navbar-btn.btn-xs:active {
   margin-top: 16px;
 }
+.btn-group-vertical .btn + .btn:hover {
+  border-top-width: 1px;
+}
+.btn-group-vertical .btn + .btn:active {
+  border-top-width: 2px;
+}
 .text-primary,
 .text-primary:hover {
   color: #158cba;
